--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,47 @@
 /*  your css code here. If applicable */
+/* Set the background color of the entire page */
+:root {
+    background-color: rgb(135, 206, 235);
+}
+
+/* Article with Paragraphs */
+article p:first-child {
+    color: white;
+    background-color: black;
+}
+
+article p:nth-child(2) {
+    color: initial;
+}
+
+article p:last-child {
+    color: red;
+}
+
+/* Unordered List */
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+ul li {
+    background-color: gray;
+    width: 50%;
+    padding: 10px;
+}
+
+/* Odd items with a white background */
+ul li:nth-child(odd) {
+    background-color: white;
+}
+
+/* First and last items with font size of 22px */
+ul li:first-child,
+ul li:last-child {
+    font-size: 22px;
+}
+
+/* Third-to-last item with a pink background */
+ul li:nth-last-child(3) {
+    background-color: pink;
+}
